# agus-maps-flutter

./: .gitignore  CHANGELOG.md  GUIDE.md  README.md  SOLUCION_CRASH_MAPAS.md  clean-build.ps1  output.log.len  pubspec.yaml  vcpkg.json
.agent/rules/: agent-guide.md
.agent/workflows/: verify_recalculation.md
.github/workflows/: devops.yml
.kiro/specs/car-maps-app/: design.md  requirements.md  tasks.md
android/src/: build.gradle
doc/: API.md  ARCHITECTURE-ANDROID.md  ARCHIVING.md  BUILD-CONFIGURATION.md  COMAPS-ASSETS.md  CONTRIBUTING.md  COPYING.md  DART-HOOKS.md  IMPL-03-mirror-service.md  IMPLEMENTATION-ANDROID.md  IMPLEMENTATION-CI-CD.md  IMPLEMENTATION-IOS.md  IMPLEMENTATION-LINUX.md  IMPLEMENTATION-MACOS.md  IMPLEMENTATION-WIN-IMPROVEMENT.md  IMPLEMENTATION-WIN-OVERLAY.md  IMPLEMENTATION-WIN.md  ISSUE-macos-resize-white-screen.md  PLAN-SWIFT-PM.md  PLAN-WASM.md  RELEASE.md  RENDER-LOOP.md
example/: README.md  pubspec.yaml
example/lib/: downloads_cache.dart  downloads_tab.dart  main.dart  settings_tab.dart
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/: build_log.txt
example/macos/Flutter/: GeneratedPluginRegistrant.swift
hook/: build.dart
ios/: agus_maps_flutter.podspec
ios/Classes/: AgusBridge.h  AgusMapsFlutterPlugin.swift  AgusMetalContextFactory.mm  agus_maps_flutter_ios.mm
lib/: agus_maps_flutter.dart  agus_maps_flutter_bindings_generated.dart  mirror_service.dart  mwm_storage.dart
lib/src/: mirror_utils.dart
linux/: CMakeLists.txt  agus_maps_flutter_plugin.cc
linux/include/agus_maps_flutter/: agus_maps_flutter_plugin.h
macos/: agus_maps_flutter.podspec
macos/Classes/: AgusBridge.h  AgusMapsFlutterPlugin.swift  AgusMetalContextFactory.mm  agus_maps_flutter_macos.mm
patches/comaps/: 0006-libs-map-routing_manager-cpp.patch  0043-libs-drape_frontend-frontend_renderer-cpp.patch  0059-libs-platform-flutter-plugin-support.patch  0069-tools-kothic-libkomwm-windows-multiprocessing.patch  0070-libs-platform-local_country_file-bundled-delete.patch  0071-libs-shaders-route-arrow-white-color.patch  0072-libs-drape_frontend-arrow3d-scale.patch  README.md
rikera_app/: NAVIGATION_IMPLEMENTATION_COMPLETE.md  NAVIGATION_IMPLEMENTATION_STATUS.md  PLUGIN_INTEGRATION_ISSUES.md  README.md  REFACTORING_COMPLETE.md  pubspec.yaml
rikera_app/.kiro/steering/: flutter-development.md
rikera_app/android/app/: build.gradle.kts
rikera_app/android/app/src/main/: AndroidManifest.xml
rikera_app/assets/comaps_data/: visibility.txt
rikera_app/assets/comaps_data/styles/default/include/: Roads.mapcss  priorities_3_FG.prio.txt
rikera_app/assets/comaps_data/styles/outdoors/include/: Roads.mapcss  priorities_3_FG.prio.txt
rikera_app/assets/comaps_data/styles/vehicle/include/: Basemap.mapcss  Icons.mapcss  Roads.mapcss  priorities_1_BG-by-size.prio.txt  priorities_3_FG.prio.txt  priorities_4_overlays.prio.txt
rikera_app/ios/Runner/: Info.plist
rikera_app/ios/Runner.xcodeproj/: project.pbxproj
rikera_app/lib/: main.dart
rikera_app/lib/app/: app.dart
rikera_app/lib/core/: core.dart
rikera_app/lib/core/constants/: app_constants.dart
rikera_app/lib/core/di/: injection_container.dart
rikera_app/lib/core/errors/: app_errors.dart
rikera_app/lib/core/services/: app_initialization_service.dart  compass_service.dart  haptic_feedback_service.dart  map_style_manager.dart  memory_management_service.dart  voice_guidance_service.dart
rikera_app/lib/core/theme/: app_theme.dart  theme.dart
rikera_app/lib/core/theme/widgets/: touch_target_wrapper.dart
rikera_app/lib/core/utils/: error_message_mapper.dart  logger.dart  permission_handler.dart  result.dart
rikera_app/lib/core/widgets/: error_dialog.dart
rikera_app/lib/features/map/data/datasources/: README.md  bookmark_datasource.dart  datasources.dart  location_datasource.dart  map_download_datasource.dart  map_engine_datasource.dart  map_engine_exception.dart  map_storage_datasource.dart  map_view_state_datasource.dart  search_datasource.dart  search_history_datasource.dart
rikera_app/lib/features/map/data/repositories/: bookmark_repository_impl.dart  location_repository_impl.dart  map_repository_impl.dart  map_view_state_repository_impl.dart  navigation_repository_impl.dart  repositories.dart  route_repository_impl.dart  search_repository_impl.dart
rikera_app/lib/features/map/domain/entities/: bookmark.dart  bookmark_category.dart  entities.dart  location.dart  map_region.dart  navigation_state.dart  region_bounds.dart  route.dart  route_bounds.dart  route_segment.dart  search_result.dart  search_result_type.dart  turn_direction.dart
rikera_app/lib/features/map/domain/repositories/: bookmark_repository.dart  location_repository.dart  (+6 more)
rikera_app/linux/: CMakeLists.txt
rikera_app/linux/runner/: my_application.cc
rikera_app/macos/Flutter/: GeneratedPluginRegistrant.swift
rikera_app/macos/Runner.xcodeproj/: project.pbxproj
rikera_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
rikera_app/macos/Runner/Configs/: AppInfo.xcconfig
rikera_app/test/: DATA_LAYER_TEST_REPORT.md  widget_test.dart
rikera_app/test/integration/: map_download_integration_test.dart
rikera_app/web/: index.html  manifest.json
rikera_app/windows/: CMakeLists.txt
rikera_app/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
rikera_app/windows/runner/: Runner.rc  main.cpp
scripts/: build_all.ps1  build_all.sh
src/: AgusEglContextFactory.cpp  AgusEglContextFactory.hpp  AgusWglContextFactory.cpp  AgusWglContextFactory.hpp  CMakeLists.txt  agus_maps_flutter.cpp  agus_maps_flutter.h  agus_maps_flutter_linux.cpp  agus_maps_flutter_win.cpp  agus_platform.cpp  agus_platform_linux.cpp
tool/: build.dart  check_mirrors.dart  map_downloader.dart
tool/src/: archive_manager.dart  build_runner.dart  cmake_build.dart  config.dart  file_operations.dart  git_operations.dart  patch_applicator.dart  platform_detector.dart  process_runner.dart  sdk_downloader.dart  utils.dart
windows/: CMakeLists.txt  agus_maps_flutter_plugin.cpp
(+91 files in other folders)
